js local storage

--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ body{
     margin-bottom: 5px;
 }
 ul li{
-    max-width: 400px;
     width: 100%;
     display: flex;
     align-items: center;
@@ -27,7 +26,7 @@ ul li span{
     align-items: flex-start;
 }
 ul{
-    max-width: 400px;
+    max-width: 565px;
     display: flex;
     flex-wrap: wrap;
     justify-content: start;
@@ -80,6 +79,7 @@ ul{
     padding: 0 10px;
     height: 41px;
     font-size: 18px;
+    cursor: pointer;
     color: #fff;
 }
 
@@ -87,11 +87,19 @@ ul{
 .add-btn{
     background-color: rgba(0, 111, 255, 0.86);
     border: 2px solid rgba(0, 111, 255, 0.86);
+    margin: 0 5px;
+    transition: 0.6s;
+}
+.add-btn:hover{
+    box-shadow: 0 0 10px 4px rgba(0, 111, 255, 0.29);
 }
 
 .clear-all{
     background-color: #e74c3c;
     border: 2px solid #e74c3c;
+}
+.clear-all:hover{
+    box-shadow: 0 0 10px 4px rgba(231, 76, 60, 0.29);
 }
 
 .del-btn{
@@ -111,7 +119,7 @@ ul{
     text-decoration: none;
     text-align: center;
     font-family: 'Montserrat', sans-serif;
-    transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
+    transition: box-shadow 500ms ease-in-out, color 500ms ease-in-out;
 }
 
 
